--- a/docs/huai_rd.qmd
+++ b/docs/huai_rd.qmd
@@ -1,8 +1,10 @@
 ---
-title: "RD Design"
+title: "The Effect of the Huai River Policy on Pollution"
 format: html
 editor: visual
 ---
+
+|   As part of a project for an Econometrics course in experimental design, I replicate the regression discontinuity approach employed by Ebenstein et al. in *New evidence on the impact of sustained exposure to air pollution on life expectancy from China's Huai River Policy*. Ebenstein and his coauthors leverage China's arbitrary Huai River policy which designated areas north of the Huai River as recipients of free or subsidized coal for indoor heating. The authors focus on estimating the effects of the policy on pollution and life expectancy; I, however, focus solely on the causal estimation of the effects on pollution as the demographic data needed for the analysis of changes in life expectancy is not public. 
 
 ```{r pkgs, echo=FALSE}
 # load pkgs
@@ -13,27 +15,27 @@ p_load(magrittr)
 
 ```{r data, echo=FALSE}
 # Load data
-river_data <- read_dta("data/huairiver.dta")
+river_data <- read_dta(here::here("data", "huairiver.dta"))
+
 ```
 
-## Question 1:
+## Camparing the effects of the policy south and north of the Huai River:
 
-|   A simple comparison of Northern cities with southern cities would not be useful to examine causal effects because it does not allow us to single out the effect of the Huai River Policy. Cities in the North of China, such as Beijing, can vary drastically from cities in the South, such as Shenzhen, whether it is economically, geographically, or demographically. Consequently, changes measured in these regions after the policy implementation cannot be attributed to the policy because the numerous factors that differentiate the regions could also be behind the changes. The regression discontinuity design implemented by Ebenstein et al. addresses this problem by analyzing the changes in the regions right on the border of the river (used as a demarcation line by the policy). The assumption is that towns on both sides of the river will be virtually the same, yet were subject to different access to heating do to an arbitrary choice. Hence, the changes measured post-policy should be attributable to the policy due to the regions' similarity.
+|   A simple comparison of northern cities with southern cities would not be useful to examine causal effects because it does not allow us to single out the effect of the Huai River Policy. Cities in the north of China, say Beijing, can vary drastically from cities in the south, say Shenzhen, whether it is economically, geographically, or demographically. Consequently, changes measured in these regions after the policy implementation cannot be attributed to the policy because the numerous factors that differentiate the regions could also be behind the changes. The regression discontinuity design implemented by Ebenstein et al. addresses this problem by analyzing the changes in the regions right on the border of the river (used as a demarcation line by the policy). The assumption is that towns on both sides of the river will be virtually the same, yet were subject to different costs to access heating do to an arbitrary demarcation choice. Hence, the changes measured post-policy should be attributable to the policy due to the regions' similarities. 
 
-## Question 2:
+## Overall approach:
 
-| The outcome variable *pm10* is the average level of PM10 measured in the air. PM10 is a type of particulate matter that adversely affects human health. The assignment variable is *dist_huai*, which denotes the distance in degrees north or south of the Huai river.
-
-## Question 3:
-
-|   When plotting large datasets with scatter plots, we may find that points can overlap and thus obfuscate the distribution of the data or any trends present therein. Binned scatter plots offer a way to address this issue by grouping data into bins. Specifically, for binned scatter plots we divide the conditional variable into equally sized bins. For each of these bins, the mean of the conditional variable is calculated and in the graph we plot the mean of the dependent variable in each of these bins. In other words, it computes the averages of the different quartiles of the data. As a result, a bin scatter allows us to get the E[Y|X] since we can use it to look for the functional form assumption.
+|   Globally, the approach is to narrow down the observations to a group of towns/cities near the border of the Huai River and to estimate the change in pollution levels associated with being north of our cutoff (i.e., the river). For the measure of pollution I use the variable *pm10* which represents the average level of PM10, a type of particulate matter that adversely affects human health, found in the air. A priori, PM10 levels are expected to increase with higher use of heating. The assignment variable is *dist_huai*, which denotes the distance in degrees north or south of the Huai river. The other independent variable, *north_huai*, is a dummy variable which equals one if a town is north of the river and zero otherwise.
 
 
-## Question 4:
+## Plotting the data:
 
-#### Part A:
+|   A discussed earlier, changes in the levels of pollution in regions far away from the cutoff for the policy are not necessarily relevant since it is hard to isolate the effects of the policy. Instead, in a regression discontinuity design, the interest is in the changes observed at and near the cutoff. Specifically, what we intend to examine with a graph is if we observe a discontinuity at the cutoff - in other words, do we see a sudden jump in pollution levels just north of the river?
 
-```{r clean data for bin scatter}
+|   We'll use a binned scatter plot, where each bin represents the average of pollution levels for towns at a certain degree from the cutoff. A binned scatter plot is necessary here because it allows us to avoid any overlap of observations that may obfuscate trends in the data, and the bins facilitate dividing the data into degrees from the cutoff.
+
+
+```{r new-bin-scatter, include=FALSE}
 # Create bins:
 river_data %<>% 
   mutate(huai_bin = cut(dist_huai, 
@@ -45,7 +47,7 @@ is.factor(river_data$huai_bin)
 table(river_data$huai_bin)
 ```
 
-```{r bin scatter with slides code, include=FALSE}
+```{r bin-scatter-old, include=FALSE}
 # Bin scatter using code from slides
 river_data %>%
   group_by(huai_bin) %>%
@@ -55,7 +57,7 @@ river_data %>%
     geom_smooth(method = "lm", se = FALSE)
 ```
 
-```{r bin scatter 4a, warning=FALSE, message=FALSE}
+```{r bin-scatter-4a, warning=FALSE, message=FALSE}
 ggplot() +
   # plot points for means of bins
   stat_summary_bin(data = river_data, aes(x = dist_huai, y = pm10), 
@@ -65,25 +67,30 @@ ggplot() +
   # Fitted line for south of Huai
   geom_smooth(data = filter(river_data, north_huai == 0), 
               aes(x = dist_huai, y = pm10), method = "lm", 
-              formula = y ~ poly(x, 2)) +
+              formula = y ~ poly(x, 3)) +
   # Fitted line for north of Huai
   geom_smooth(data = filter(river_data, north_huai == 1), 
               aes(x = dist_huai, y = pm10), method = "lm", 
-              formula = y ~ poly(x, 2)) +
+              formula = y ~ poly(x, 3)) +
   # Misc settings
-  labs(title = "   PM10 as a Function of Degrees North from 
-                        the Huai River", 
+  labs(title = "PM10 as a Function of Degrees north from the Huai River", 
        y = "Average PM10 Level (ug/m3)", 
-       x = "Distance North from the Huai River (Degrees)") +
+       x = "Degrees north of the Huai River Boundary") +
+  scale_x_continuous(n.breaks = 20) +
+  xlim(-14, 14) +
   theme_minimal()
 
 ```
 
-#### Part B:
+## Balance tests:
+
+|   In essence, with balance tests we examine if characteristics across groups (in this case climatic characteristics across regions) follow similar trends (i.e., are they "balanced"). The goal is to gauge if the treatment, in our case the being north of the Huai River, affects these characteristics; if no significant changes seem to be present, then these tests support any causal relationships found between treatment and outcome. 
+
+|   The carry out these tests, we can generate binned scatter plots of each characteristic available in the data - temperature, precipitation, and wind speed - as a function of location with respect to the Huai River boundary. Running a regression of treatment on these characteristics would give more precise results - statistically significant coefficients indicate a characteristic is not balanced. But since here we are dealing with climatic characteristics, rather than the usual demographic characteristics in random samples, ensuring that the general trend is found across the data suffices. 
 
 -   Temperature test:
 
-```{r bin scatter 4bi, warning=FALSE, message=FALSE}
+```{r bin-scatter-4bi, warning=FALSE, message=FALSE}
 ggplot() +
   # plot points for means of bins
   stat_summary_bin(data = river_data, aes(x = dist_huai, y = temp), 
@@ -99,16 +106,17 @@ ggplot() +
               aes(x = dist_huai, y = temp), method = "lm", 
               formula = y ~ poly(x, 2)) +
   # Misc settings
-  labs(title = "Temperature as a Function of Degrees North from 
-                          the Huai River", 
+  labs(title = "Temperature as a Function of Degrees north from the Huai River", 
        y = "Avg Temperature (Deg F)", 
-       x = "Distance North from the Huai River (Degrees)") +
+       x = "Degrees north of the Huai River Boundary") +
+  scale_x_continuous(n.breaks = 20) +
+  xlim(-14, 14) +
   theme_minimal() #+ theme(text = element_text("Roboto Condensed") )
 ```
 
 -   Precipitation test:
 
-```{r bin scatter 4bii, warning=FALSE, message=FALSE}
+```{r bin-scatter-4bii, warning=FALSE, message=FALSE}
 ggplot() +
   # plot points for means of bins
   stat_summary_bin(data = river_data, aes(x = dist_huai, y = prcp), 
@@ -124,17 +132,18 @@ ggplot() +
               aes(x = dist_huai, y = prcp), method = "lm", 
               formula = y ~ poly(x, 3)) +
   # Misc settings
-  labs(title = "Precipitation as a Function of Degrees North from 
-                            the Huai River", 
+  labs(title = "Precipitation as a Function of Degrees north from the Huai River", 
        y = "Avg Precipiation (mm)", 
-       x = "Distance North from the Huai River (Degrees)") +
+       x = "Degrees north of the Huai River Boundary") +
+  scale_x_continuous(n.breaks = 20) +
+  xlim(-14, 14) +
   theme_minimal()
 
 ```
 
 -   Wind speed test:
 
-```{r bin scatter 4biii, warning=FALSE, message=FALSE}
+```{r bin-scatter-4biii, warning=FALSE, message=FALSE}
 ggplot() +
   # plot points for means of bins
   stat_summary_bin(data = river_data, aes(x = dist_huai, y = wspd), 
@@ -144,22 +153,36 @@ ggplot() +
   # Fitted line for south of Huai
   geom_smooth(data = filter(river_data, north_huai == 0), 
               aes(x = dist_huai, y = wspd), method = "lm", 
-              formula = y ~ poly(x, 4)) +
+              formula = y ~ poly(x, 3)) +
   # Fitted line for north of Huai
   geom_smooth(data = filter(river_data, north_huai == 1), 
               aes(x = dist_huai, y = wspd), method = "lm", 
               formula = y ~ poly(x, 4)) +
   # Misc settings
-  labs(title = "Wind speed as a Function of Degrees North from 
-                          the Huai River", 
+  labs(title = "Wind speed as a Function of Degrees north from the Huai River", 
        y = "Avg Wind Speed (m/s)", 
-       x = "Distance North from the Huai River (Degrees)") +
+       x = "Degrees north of the Huai River Boundary") +
+  scale_x_continuous(n.breaks = 20) +
+  xlim(-14, 14) +
   theme_minimal()
 ```
 
-## Question 5:
+|   In the case of temperature and precipitation, we find there are very slight differences when crossing the cutoff, but most importantly we see the same trend is present north and south of the river. The case of wind speed is trickier, as we see a slight discontinuity at the river as well as potentially different trends. An significant note in this case, however, is that the change in trends that seems to be present at the cutoff looks to be primarily driven by the wind speed average of towns 1 degree south of the cutoff, which could be an outlier.
 
--   Bandwidth of 5 degrees chosen - i.e. $c - 5 \le X \le c + 5$
+
+## Setting a bandwidth:
+
+|   To analyse the effects of the Huai River policy, to narrow down the group of observations used to towns near the cutoff as we need towns that are subject to similar conditions. If we satisfy this condition, then we strengthen the assumption that the Huai River policy is the main driver of any changes in pollution levels. We will narrow down the group of towns used by setting a five-degree bandwidth - in practice, this translates to only examining changes in towns that are 5 degrees or less away from the Huai river (i.e., our cutoff).
+
+-   Bandwidth of 5 degrees:  $c - 5 \le X \le c + 5$
+
+## Estimating the discontinuity:
+
+|   The specification used will be the following:
+
+$pm10 = \alpha + \beta_{1} north + \beta_{2} distance + \beta_{3} north \cdot distance + \epsilon_i$
+
+|       where we regress PM10 levels on the dummy for whether a town is north of the river, *north_huai*, on the degrees from the river, *dist_huai*, and on their interaction.
 
 ```{r regs to quant discontinuities}
 # Regress distance from pm10 on distance from Huai
@@ -185,9 +208,8 @@ ci_reg_wspd <- confint.lm(reg_wspd)
 ```
 
 ```{r stargzer 4, echo=FALSE,warning =FALSE, message=FALSE}
-stargazer::stargazer(reg_pm10, reg_temp, reg_prcp, reg_wspd,
-                  #se = list(age_bal_se, edu_bal_se, gender_bal_se, 
-                            #english_bal_se, white_bal_se),
+stargazer::stargazer(reg_pm10, reg_temp, reg_prcp, reg_wspd, 
+                     ci = TRUE,
                   dep.var.labels = c("PM10", "Temperature", 
                                      "Precipitation", "Wind Speed"),
                   covariate.labels = c("Treatment", "Running Variable", "Interaction"),
@@ -196,45 +218,33 @@ stargazer::stargazer(reg_pm10, reg_temp, reg_prcp, reg_wspd,
                   type = 'text', title = "Balance Tests")
 ```
 
-```{r print CIs}
-ci_reg_pm10
-ci_reg_temp
-ci_reg_prcp
-ci_reg_wspd
-```
 
-
-## Question 6:
+## Identification Assumption:
 
 |   In a regression discontinuity design, the identification assumption is that the only reason for discrete jumps in the dependent variable around the cutoff are changes in assignment to the cutoff. In other words, observations on either side of the cutoff would have similar outcomes absent of treatment. The identification assumption is violated when individuals have precise control over which side of the cutoff they will be on (i.e., they have control over the assignment variable).
 
-|   When graphing bin scatter plots of temperature, precipitation and wind speed as a function of degrees North of the cutoff, we find that there is a jump at the discontinuity but the trends remain constant for the most part. In the case of temperature the jump at the cutoff is small and the (mostly) linear trend is constant - I say mostly because South of a cutoff we see a quadratic trend but this is driven primarily by the bin for the observations closest to the cutoff, so we can assume some noise here. The jump for precipitation is also rather small and the cubic trend in the data is constant. The case of wind speed is more challenging to evaluate graphically as the data looks more spurious than in the earlier cases; south of the cutoff we see a quadratic trend in the data and North of the cutoff we see what could be a cubic trend but with very slight variation. Moreover, the jump, or rather drop, at the discontinuity for wind speed is more pronounced. The tests done with regressions, however, do not find any significant effects associated with treatment on temperature, precipitation and wind speed. These tests show that absent of treatment, similar trends would be followed; therefore the tests indicate that the identification assumption was not violated. 
+|   When graphing bin scatter plots of temperature, precipitation and wind speed as a function of degrees north of the cutoff, we find that there is a jump at the discontinuity but the trends remain constant for the most part. In the case of temperature the jump at the cutoff is small and the (mostly) linear trend is constant - I say mostly because south of a cutoff we see a quadratic trend but this is driven primarily by the bin for the observations closest to the cutoff, so we can assume some noise here. The jump for precipitation is also rather small and the cubic trend in the data is constant. The case of wind speed is more challenging to evaluate graphically as the data looks more spurious than in the earlier cases; south of the cutoff we see a quadratic trend in the data and north of the cutoff we see what could be a cubic trend but with very slight variation. Moreover, the jump, or rather drop, at the discontinuity for wind speed is more pronounced. The tests done with regressions, however, do not find any significant effects associated with treatment on temperature, precipitation and wind speed. These tests show that absent of treatment, similar trends would be followed; therefore the tests indicate that the identification assumption was not violated.
+
+## Is the issue of manipulation relevant in this case?
+
+|   Manipulation is relevant in studies in which individuals, who are part of the study and whose outcomes are measured, may have control over assignment of treatment (i.e., placement before or after cutoff). If that were the case, then the regression discontinuity design would fail since it would violate the key assumption that individuals on both sides of the cutoff would have similar outcomes. In the case of the Huai river policy study, the assignment of treatment (subsidized heating) is completely arbitrary as it is based on a geographical feature (the river). Additionally, the outcomes we are concerned with here are not those of individuals who could change their location based on the cutoff, but rather pollution levels which are directly dependent on geographical location. Therefore, manipulation is not an issue.
+
+#### What if we were measureing indivuals' outcomes?
+
+|   If as part of the study we were to actually measure outcomes of individuals, for example life expectancy, then we would have to run a manipulation test to ensure individuals did not have control over assignment north of the cutoff to access the subsidized heating. To do so, plotting the distribution of individuals' locations with respect to the cutoff. The proper distributions that would pass the manipulation test would vary as they are highly contextual. In our case, the distribution would not be normal but rather it would depend on the geographical location of cities. They key would be to examine if there is a concentration of individuals right north of the Huai river, indicating whether individuals moved specifically top secure the subsidized heating. Unfortunately, we cannot run this test because, as previously mentioned, the demographic data is not public. 
 
 
-## Question 7: 
+## Placebo test:
 
-|   Since the Huai River was selected arbitrarily as a measure to split China into a North and South section as far as the policy was concerned, individuals had not control over where the cutoff was set. Additionally,
-my understanding is that individuals in China don't have necessarily the same freedom of movement across cities as seen in other countries (Hukou System?). If that were the case, then the limits on movement should ensure that the distribution of observations in distance from the cutoff is as good as random assignment. Lastly, these two cases described above would only be pertinent when evaluating health outcomes, but when analyzing manipulation in the context of the effect of the cutoff on PM10, then there cannot be manipulation since observations are the locations of cities (unalterable, at least reasonably within the short and medium term).
-|   Since individuals have no control over where the policy drew the line for the cutoff nor do they have significant control over where they may live, then we should not need to worry about manipulation in this context either. Nevertheless, I ran a manipylation test just to examine the results. 
+#### Why is a placebo test necessary?
 
-```{r manipulation test, warning=FALSE, message=FALSE}
-ggplot(river_data) + 
-  geom_histogram(aes(x = dist_huai)) +
-  labs(title = "Distribution of Observations' Degrees from Cutoff", 
-       x = " Degrees from cutoff",
-       y = "Count") +
-  theme_minimal()
+|   A discontinuity at the cutoff boundary, is indicative of a potential effect stemming from the Huai River policy. However, if we find that discontinuities are present in other parts of the data, then the conclusions of the main cutoff are undermined. A placebo test can be used to examine these possibilities; specifically in our case, the placebo test examines whether discontinuities are found in other regions China as a result of the Huai River policy.
 
-```
+#### Running the placebo test:
 
--   We do see a dip in the distribution around the cutoff, but it is not necessarily indicative of an issue. This is because the observations are locations of cities, which cannot be altered (i.e., cannot be "manipulated"). 
+|   The placebo test can be ran by plotting the estimated discontinuities in pollution levels of PM10 at one degree latitude intervals north and south. Th essence of the test is to 
 
 
-## Question 8: 
-a) A discontinuity at the cutoff boundary, is indicative of a potential effect. However, if we find that discontinuities are present in other parts of the data, then the conclusions of the main cutoff are undermined. A placebo test can be used to examine these possibilities; specifically in our case, the placebo test examines whether discontinuities are found in other regions China. The results show that no other region other than the actual Huai river has significant discontinuous changes in PM10 or life expectancy. 
-
-
-b) Replication of placebo test:
 ```{r add placebo variables}
 # Create new variable, `placebo_dist_huai`, that where observations are shifted 1 degree north
 river_data %<>% mutate(dist_huai_1 = dist_huai + 1, 
@@ -267,10 +277,9 @@ river_data %<>% mutate(dist_huai_neg5 = dist_huai - 5,
 
 ```
 
-
 ```{r regs for placebos with indics}
 
-# Run reg of PM10 on north_huai and new placebo distance variable (placebo_dist_huai)
+# Run reg of PM[10] on north_huai and new placebo distance variable (placebo_dist_huai)
 placebo_reg1 <- lm(pm10 ~ dist_huai_1*placebo_indic_1, 
                   filter(river_data, dist_huai_1 >= -5 & dist_huai_1 <=5))
 placebo_reg2 <- lm(pm10 ~ dist_huai_2*placebo_indic_2, 
@@ -295,7 +304,6 @@ placebo_reg_neg5 <- lm(pm10 ~ dist_huai_neg5*placebo_indic_neg5,
 
 
 ```
-
 
 ```{r pull conf ints and estims, warning=FALSE, message=FALSE}
 # Find confidence intervals
@@ -334,7 +342,8 @@ estimates <- bind_rows(estim_neg5, estim_neg4, estim_neg3,
                        estim_neg2, estim_neg1, estim_0, estim_1, 
                        estim_2, estim_3, estim_4, estim_5)
 ```
-```{r create df with CIs and estims and row names}
+
+```{r create df with CIs and estims and row names, message=FALSE, warning=FALSE}
 # Create vector for row names
 degs <- c("-5", "-4", "-3", "-2", "-1", "0", "1", "2", "3", "4", "5")
 
@@ -345,7 +354,7 @@ colnames(placebo_estimates) <- c("degs_shifted", "estimates", "lower", "upper")
 
 ```
 
-```{r plot placebo disconts}
+```{r plot-placebo-disconts}
 # Graph
 ggplot(placebo_estimates) +
   geom_point(aes(x = degs_shifted, y = estimates), color = "tomato3", shape = 21) +
@@ -353,7 +362,15 @@ ggplot(placebo_estimates) +
                     color = "tomato3")) +
   geom_hline(yintercept = 0) + 
   labs(title = "Placebo Tests for Discontinuities",
-       x = "Degrees Shifted", y = "PM10 Estimate (ug/m^3)") +
+       x = "Degrees from Cutoff", y = "Estimate of PM10 Change (ug/m^3))") +
   theme_minimal() +
   theme(legend.position = "none")
 ```
+
+|   The only significant coefficient estimate of a discontinuity is that of the actual cutoff (the Huai river), with an estimate slightly above 50 without a possible effect of zero within the confidence intervals. Thus, the results show that no other region has statistically significant discontinuous changes in PM10.
+
+
+
+## Source
+
+[Ebenstein, A., M. Fan, M. Greenstone, G. He, and M. Zhou. 2017. New evidence on the impact of sustained exposure to air pollution on life expectancy from China’s Huai River Policy. Proceedings of the National Academy of Sciences of the USA 114 (39): 10384–89](https://www.pnas.org/doi/abs/10.1073/pnas.1616784114)
